[package]
name = "typed_id"
version = "0.1.0"
edition = "2021"
license = "LGPL-2.1"
authors = ["TylerBloom <tylerbloom2222@gmail.com>"]

readme = "README.md"
description = "Make your IDs strongly typed!!"
repository = "https://github.com/TylerBloom/TypedId"

keywords = ["id","uuid"]
categories = ["data-structures"]

[dependencies]
paste = { version = "1.0" }
serde = { version = "1.0", features = ["derive"], optional = true }

[dev-dependencies]
serde_json = { version = "1.0" }
